--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,15 @@
 version: '3.7'
 
 services:
+  minio:
+    image: minio/minio:RELEASE.2021-02-11T08-23-43Z
+    container_name: s3
+    ports:
+      - "9000:9000"
+    command: minio server data/
+    networks:
+      - my_network
+
   fastapi_app:
     build: .
     ports:
@@ -10,13 +19,10 @@ services:
       "app:app",
       "--host", "0.0.0.0"
     ]
-
-  minio:
-    image: minio/minio:RELEASE.2021-02-11T08-23-43Z
-    container_name: s3
-    ports:
-      - "9000:9000"
-    command: minio server data/
+    depends_on:
+      - minio
+    networks:
+      - my_network
 
   aws:
     image: amazon/aws-cli
@@ -28,3 +34,9 @@ services:
       AWS_SECRET_ACCESS_KEY: minioadmin
     depends_on:
       - minio
+    networks:
+      - my_network
+
+networks:
+  my_network:
+    driver: bridge
