--- a/requirements.txt
+++ b/requirements.txt
@@ -59,9 +59,12 @@ GitPython==3.1.40
 grandalf==0.8
 gto==1.6.1
 h11==0.14.0
+httpcore==1.0.2
+httpx==0.26.0
 hydra-core==1.3.2
 idna==3.6
 importlib-metadata==7.0.0
+iniconfig==2.0.0
 installer==0.7.0
 iterative-telemetry==0.0.8
 jaraco.classes==3.3.0
@@ -85,6 +88,7 @@ pathspec==0.12.1
 pexpect==4.9.0
 pkginfo==1.9.6
 platformdirs==3.11.0
+pluggy==1.3.0
 poetry==1.7.1
 poetry-core==1.8.1
 poetry-plugin-export==1.6.0
@@ -100,6 +104,7 @@ Pygments==2.17.2
 pygtrie==2.5.0
 pyparsing==3.1.1
 pyproject_hooks==1.0.0
+pytest==7.4.3
 python-dateutil==2.8.2
 python-multipart==0.0.6
 pytz==2023.3.post1
